--- a/IntuitERP/Viwes/CadastroProduto.xaml
+++ b/IntuitERP/Viwes/CadastroProduto.xaml
@@ -83,8 +83,8 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <Button x:Name="SalvarProdutoButton" Grid.Column="0" Text="Salvar Produto" BackgroundColor="ForestGreen" TextColor="White" FontSize="16" CornerRadius="8"/>
-            <Button x:Name="CancelarButton" Grid.Column="1" Text="Cancelar" BackgroundColor="DarkRed" TextColor="White" FontSize="16" CornerRadius="8"/>
+            <Button x:Name="SalvarProdutoButton" Grid.Column="0" Clicked="SalvarProdutoButton_Clicked" Text="Salvar Produto" BackgroundColor="ForestGreen" TextColor="White" FontSize="16" CornerRadius="8"/>
+            <Button x:Name="CancelarButton" Clicked="CancelarButton_Clicked" Grid.Column="1" Text="Cancelar" BackgroundColor="DarkRed" TextColor="White" FontSize="16" CornerRadius="8"/>
             <!-- Add Clicked event handlers in C# for functionality -->
             <!-- e.g., Clicked="SalvarProdutoButton_Clicked" -->
         </Grid>
